--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,13 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
-        -name: Run migrations
+      - name: Install golang-migrate
+        run:  |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.19.1/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin/
+          which migrate
+
+      - name: Run migrations
         run: make migrateup
 
       - name: Test
