--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: Fq9zkLWA2ZBAhq
           POSTGRES_DB: simple_payment
-          POSTGRES_PORT: 5432
+        ports:
+          - 5432:5432
 
         options: >-
           --health-cmd pg_isready
